# Supernova

./: .gitignore  CMakeLists.txt  LICENSE  README.md  read_file.cxx  runner.cxx  supernova.cxx  supernova.h
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cmake-multi-platform.yml
tests/: CMakeLists.txt  instructions.cxx  opcodes.cxx  readfile.cxx  test.spn
